--- a/index.html
+++ b/index.html
@@ -203,13 +203,12 @@
     <!-- About Section -->
     <section class="bg-primary text-white mb-0" id="about">
       <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
+        <h2 class="text-center text-uppercase text-white">About</h2>  <h2 class="text-center text-uppercase text-white">____</h2>
         <br>
         <br>
-          <div class="row">
-            <div class="col-lg-4 ml-auto">
-              <h3>Summary</h3>
-              <p class="lead"> A Software Egineer with a demonstrated history in Digital Marketing. Skilled in Agile environments, RESTful methodologies, Git(+ version control), GitHub, Ruby, Ruby on Rails, MVC,JavaScript(ES5 & ES6), jQuery, HTML, CSS, OOP, Google Adwords, Google Analytics, Bing Ads, and Search Engine Optimization (SEO). Problem solver with a passion for technology and excellent social skills(verbal/written) with an Associate of Arts (A.A.) focused in General Studies from Valencia College. </p>
+            <div class="ml-auto">
+              <h3 class="text-center">Summary</h3>
+              <p class="lead">   A Software Egineer with a demonstrated history in Digital Marketing. Skilled in Agile environments, RESTful methodologies, Git(+ version control), GitHub, Ruby, Ruby on Rails, MVC,JavaScript(ES5 & ES6), jQuery, HTML, CSS, OOP, Google Adwords, Google Analytics, Bing Ads, and Search Engine Optimization (SEO). Problem solver with a passion for technology and excellent social skills(verbal/written) with an Associate of Arts (A.A.) focused in General Studies from Valencia College. </p>
             </div>
 
           <!-- <div class="col-lg-4 ml-auto">
@@ -217,11 +216,11 @@
             <p class="lead">  Ruby, Ruby on Rails, MVC, PostgreSQL, HTML, CSS, JavaScript, Git/Github, OOP, HTTP Protocols, SCRUM </p>
           </div> -->
 
-          <div class="col-lg-4 mr-auto">
+          <div>
             <br>
 
-            <h3>Certifications</h3>
-            <p class="lead">Wyncode- Full Stack Web Immersive
+            <h3 class="text-center">Certifications</h3>
+            <p class="lead text-center">Wyncode- Full Stack Web Immersive
             <br>
             Google-  Google Analytics Certified
             <br>
@@ -229,8 +228,7 @@
             <br>
             Hubspot- Inbound Marketing Certification</p>
           </div>
-        </div>
-      </div>
+
     </section>
 
     <!-- Contact Section -->
