--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
       <!--  -->
       <!--  -->
       <!--  -->
-      <!--  -->
 
         <!-- <hr class="star-light">
         <h2 class="font-weight-light mb-0">Software Engineer</h2> -->
@@ -207,10 +206,12 @@
         <h2 class="text-center text-uppercase text-white">About</h2>  <h2 class="text-center text-uppercase text-white">____</h2>
         <br>
         <br>
+          <div class="row">
             <div class="ml-auto">
               <h3 class="text-center">Summary</h3>
               <p class="lead">   A Software Egineer with a demonstrated history in Digital Marketing. Skilled in Agile environments, RESTful methodologies, Git(+ version control), GitHub, Ruby, Ruby on Rails, MVC,JavaScript(ES5 & ES6), jQuery, HTML, CSS, OOP, Google Adwords, Google Analytics, Bing Ads, and Search Engine Optimization (SEO). Problem solver with a passion for technology and excellent social skills(verbal/written) with an Associate of Arts (A.A.) focused in General Studies from Valencia College. </p>
             </div>
+          </div>
 
           <!-- <div class="col-lg-4 ml-auto">
             <h3>Skills</h3>
@@ -233,17 +234,17 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Contact </h2>
         <br>
         <br>
 
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-8 mx-auto"> -->
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
+            <!-- <form name="sentMessage" id="contactForm" novalidate="novalidate">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                   <label>Name</label>
@@ -281,7 +282,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="footer text-center">
