--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
             <h4 class="text-secondary">(Fully Responsive)</h4>
               </a>
               <img class="img-fluid mb-5" src="img/portfolio/placesaver.jpg" alt="">
-              <h4 class="mb-5"> <a href="https://placesaver.herokuapp.com/" target="_blank"> Place Saver </a> is a solo a solo project built with JavaScript, the Google Maps API, Ruby, Ruby on Rails, HTML, CSS, Axios HTTP Client, PostgreSQL, Git/Github, RESTful methodolgies, and deployed in production via Heroku.
+              <h4 class="mb-5"> <a href="https://placesaver.herokuapp.com/" target="_blank"> Place Saver </a> is a solo project built with JavaScript, the Google Maps API, Ruby, Ruby on Rails, HTML, CSS, Axios HTTP Client, PostgreSQL, Git/Github, RESTful methodolgies, and deployed in production via Heroku.
               </h4>
 <hr>
 <br>
             <h4 class="mb-5">
-                <a href="https://placesaver.herokuapp.com/" target="_blank"> Place Saver </a> lets users to upload photos, rate places, and save places address on a map with the Google Map API. It then displays  a photo of the place, the place location on a map regardless if it is stored in Google's database as a "Google Place". Users can view their places in 3 different displays: 3-D Panoramic street view, satellite view, or on a normal map view. User information is stored in a PostgreSQL database. If the user doesn't know the address of the place they'd like to store they can input the title of the place, and if popular enough the API response will still display the location correctly on the map (ex- the Eiffel Tower, Miami Airport, etc.).
+                <a href="https://placesaver.herokuapp.com/" target="_blank"> Place Saver </a> lets users to upload photos, rate places, and save places address on a map using the Google Map API. It then displays  a photo of the place and the place location on a map regardless if it is stored in Google's database as a "Google Place". Users can view their places in 3 different displays: 3-D Panoramic street view, satellite view, or on a normal map view. User information is stored in a PostgreSQL database. If the user doesn't know the address of the place they'd like to store they can input the title of the place, and if popular enough the API response will still display the location correctly on the map (ex- the Eiffel Tower, Miami Airport, etc.).
             </h4>
 <hr>
 <br>
