--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="navbar-brand " href="https://www.linkedin.com/in/jmichaeln5/" target="_blank"><i class="fa fa-linkedin-square fa-5" aria-hidden="true"></i>
         </a>
 
-        <a class="navbar-brand " href="https://www.instagram.com/jon_norton_/" target="_blank">
+        <a class="navbar-brand " href="https://www.instagram.com/jmichaeln5/" target="_blank">
           <i class="fa fa-instagram fa-5" aria-hidden="true"></i>
         </a>
 
@@ -81,7 +81,7 @@
             <font color="white"> LinkedIn <i class="fa fa-linkedin-square fa-5" aria-hidden="true"></i></font>
           </a>
 <hr>
-          <a class="text-center " href="https://www.instagram.com/jon_norton_/" target="_blank">
+          <a class="text-center " href="https://www.instagram.com/jmichaeln5/" target="_blank">
             <font color="white"> Instagram <i class="fa fa-instagram fa-5" aria-hidden="true"></i></font>
           </a>
       </h1>
