Project info update

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               </h4>
 <hr>
             <h4 class="mb-5">
-                <a href="https://myapply.herokuapp.com/" target="_blank"> MyApply </a> archieves user input regarding job application information and stores it in a PostgreSQL database. It keeps track of the date applied, what jobs have been applied to, the number of jobs a user applied to, and allows users too add additional notes about each job/job application.
+                <a href="https://myapply.herokuapp.com/" target="_blank"> MyApply </a> archieves user input regarding job application information and stores it in a PostgreSQL database. It keeps track of the date applied, what jobs have been applied to, the number of jobs a user applied to, and allows users to add additional notes about each job/job application.
             </h4>
 <hr>
 <br>
