Adding Laravel Blog to Portfolio

--- a/index.html
+++ b/index.html
@@ -148,11 +148,25 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
+              <h4 class="text-center"> Laravel Blog</h4>
+              <img class="img-fluid" src="img/portfolio/laravel-logo.png" alt="">
+            </a>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
               <h4 class="text-center">Booleans Game</h4>
               <img class="img-fluid" src="img/portfolio/torf.jpg" alt="">
             </a>
           </div>
         </div>
+
+
 
           <!--  -->
           <!--  -->
@@ -162,16 +176,7 @@
           <!--  -->
           <!--  -->
 <!--
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
+
 
 
           <div class="col-md-6 col-lg-4">
@@ -475,8 +480,54 @@
       </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
+
+    <!-- Portfolio Modal 4 --> <!--  Laravel Blog-->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+<!--  Laravel Blog-->
+        <a href="http://laraveling.herokuapp.com/" target="_blank">  <h2 class="text-secondary text-uppercase mb-0"> Laravel Blog </h2>
+        </a>
+
+        <img class="img-fluid mb-5" src="img/portfolio/laravel-logo.png" alt="">
+
+        <h4 class="mb-5">This <a href="http://laraveling.herokuapp.com/" target="_blank"> Laravel Blog </a> is a solo project built with PHP, Laravel, Bootstrap, HTML, CSS, PostgreSQL, Git/Bitbucket, AWS, and uses all HTTP verbs, while following RESTful methodolgies.
+        </h4>
+
+        <h4 class="mb-5">
+        This <a href="http://laraveling.herokuapp.com/" target="_blank"> Blog </a> is a fully operationally CRUD application hosted via Heroku.
+        </h4>
+            <hr>
+            <br>
+        <h4 class="mb-5">
+        Click <a class="btn btn-primary btn-lg rounded-pill" href="http://laraveling.herokuapp.com/" target="_blank"> Here </a> to check out my Laravel Blog.
+        </h4>
+
+        <hr>
+<!-- Exit Button -->
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!--  Laravel Blog End-->
+
+
+
+
+
+
+
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -493,21 +544,17 @@
 
         <h4 class="mb-5"> <a href="https://repl.it/@jmichaeln5/UnrulyAjarDisk" target="_blank"> True or False </a> Was created with the Ruby language.
         </h4>
+
         <h4 class="mb-5">
-
         <a href="https://repl.it/@jmichaeln5/UnrulyAjarDisk" target="_blank"> True or False </a> Tests developer's knowledge of Booleans. How well do you know your Booleans? Click below to find out!
-
+        </h4>
+            <hr>
+            <br>
+        <h4 class="mb-5">
+        Click <a class="btn btn-primary btn-lg rounded-pill" href="https://repl.it/@jmichaeln5/UnrulyAjarDisk" target="_blank"> Here </a> to Play True or False.
         </h4>
 
         <hr>
-        <br>
-          <h4 class="mb-5">
-          Click <a class="btn btn-primary btn-lg rounded-pill" href="https://repl.it/@jmichaeln5/UnrulyAjarDisk" target="_blank"> Here </a> to Play True or False.
-          </h4>
-
-        <hr>
-
-
 <!-- Exit Button -->
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -519,27 +566,11 @@
       </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
-    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
+
+
+
+
+
 
     <!-- Portfolio Modal 5 -->
     <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
