Added Fit305 and WebChef to Portfolio

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
-
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
 
   </head>
+
+  <!--  -->
+  <!--  -->
+  <!--  -->
 
   <body id="page-top">
 
@@ -64,6 +65,7 @@
 
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
+
       <div class="container">
         <h1 class="mb-0">Jonathan Norton</h1>
         <br>
@@ -76,12 +78,12 @@
         <h1 class="mb-5 text-secondary ">
           <a class="text-center " href="https://github.com/jmichaeln5" target="_blank"><font color="white"> GitHub <i class="fa fa-github fa-5 " aria-hidden="true"></i></font>
           </a>
-<hr>
+        <hr>
           <a class="text-center " href="https://www.linkedin.com/in/jmichaeln5/" target="_blank">
             <font color="white"> LinkedIn <i class="fa fa-linkedin-square fa-5" aria-hidden="true"></i></font>
           </a>
-<hr>
-          <a class="text-center " href="https://www.instagram.com/jmichaeln5/" target="_blank">
+        <hr>
+          <a class="text-center" href="https://www.instagram.com/jmichaeln5/" target="_blank">
             <font color="white"> Instagram <i class="fa fa-instagram fa-5" aria-hidden="true"></i></font>
           </a>
       </h1>
@@ -90,21 +92,68 @@
       <!--  -->
       <!--  -->
       <!--  -->
-
         <!-- <hr class="star-light">
         <h2 class="font-weight-light mb-0">Software Engineer</h2> -->
       </div>
+
     </header>
 
-    <!-- Portfolio Grid Section -->
+
+    <!-- Portfolio Grid Section Begin -->
+    <!-- Portfolio Grid Section Begin -->
+    <!-- Portfolio Grid Section Begin -->
+    <!-- Portfolio Grid Section Begin -->
+    <!-- Portfolio Grid Section Begin -->
+    <!-- Portfolio Grid Section Begin -->
+
+
     <section class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
 
         <br>
         <br>
+        <a href="https://fit360.herokuapp.com/" target="_blank" class="btn btn-lg btn-primary btn-block" style="color:white; background-color:#0395ff; border:none;" > View My Latest Project</a>
+        <br>
+        <br>
 
         <div class="row">
+
+
+          <!-- Fit360 Begin  -->
+          <div class="col-md-6 col-lg-4">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <h4 class="text-center"> Fit360</h4>
+              <!-- <h5 class="text-center"> (Stable Release 4/25/18)</h5> -->
+              <img class="img-fluid" src="img/portfolio/fit360.jpeg" alt="fit360-cover-photo">
+            </a>
+          </div>
+        <!-- Fit360 End  -->
+
+
+
+        <!-- Vegan Eats Begin  -->
+        <div class="col-md-6 col-lg-4">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-7">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fa fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <h4 class="text-center"> Vegan Eats</h4>
+            <img class="img-fluid" src="img/portfolio/vegan-diet.jpg" alt="fit360-cover-photo">
+          </a>
+        </div>
+        <!-- Vegan Eats End  -->
+
+
+
+          <!-- Place Saver Begin  -->
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -116,31 +165,11 @@
               <img class="img-fluid" src="img/portfolio/placesaver.jpg" alt="">
             </a>
           </div>
+          <!-- Place Saver End  -->
 
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-                <h4 class="text-center"> MyApply</h4>
-              <img class="img-fluid" src="img/portfolio/myapply.jpg" alt="">
-            </a>
-          </div>
 
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <h4 class="text-center">Location Information</h4>
-              <img class="img-fluid" src="img/portfolio/geo-pic.jpg" alt="">
-            </a>
-          </div>
 
+          <!-- Laravel Begin  -->
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -152,7 +181,41 @@
               <img class="img-fluid" src="img/portfolio/laravel-logo.png" alt="">
             </a>
           </div>
+          <!-- Laravel End  -->
 
+
+
+          <!-- Location Information Begin  -->
+          <div class="col-md-6 col-lg-4">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <h4 class="text-center">Location Information</h4>
+              <img class="img-fluid" src="img/portfolio/geo-pic.jpg" alt="">
+            </a>
+          </div>
+          <!-- Location Information End  -->
+
+
+          <!-- MyApply Begin  -->
+          <div class="col-md-6 col-lg-4">
+            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+                <h4 class="text-center"> MyApply</h4>
+              <img class="img-fluid" src="img/portfolio/myapply.jpg" alt="">
+            </a>
+          </div>
+          <!-- MyApply End  -->
+
+
+          <!-- Booleans Begin  -->
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -164,52 +227,25 @@
               <img class="img-fluid" src="img/portfolio/torf.jpg" alt="">
             </a>
           </div>
-        </div>
+        <!-- Booleans End  -->
 
 
 
-          <!--  -->
-          <!--  -->
-          <!-- Empty Portfolio Spots Begin-->
-          <!--  -->
-          <!--  -->
-          <!--  -->
-          <!--  -->
-<!--
 
 
 
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-            </a>
-          </div>
+      </div>       <!-- ROW END DIV -->
 
 
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div> -->
 
 
-          <!--  -->
-          <!--  -->
-          <!-- Empty Portfolio Spots End-->
-          <!--  -->
-          <!--  -->
-          <!--  -->
-          <!--  -->
+        <!-- Portfolio Grid Section End -->
+        <!-- Portfolio Grid Section End -->
+        <!-- Portfolio Grid Section End -->
+        <!-- Portfolio Grid Section End -->
+        <!-- Portfolio Grid Section End -->
+        <!-- Portfolio Grid Section End -->
+
         </div>
       </div>
     </section>
@@ -518,15 +554,14 @@
         </div>
       </div>
     </div>
-<!--  Laravel Blog End-->
+    <!-- Portfolio Modal 4 --> <!--  Laravel Blog End -->
 
 
 
 
 
 
-
-    <!-- Portfolio Modal 5 -->
+    <!-- Portfolio Modal 5 --> <!--  Booleans Game Begin-->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -535,8 +570,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-<!--  Booleans Game Begin-->
-
+                <!--  Booleans Game Begin-->
         <a href="https://repl.it/@jmichaeln5/UnrulyAjarDisk" target="_blank">  <h2 class="text-secondary text-uppercase mb-0"> Booleans Game </h2>
         </a>
 
@@ -555,16 +589,117 @@
         </h4>
 
         <hr>
-<!-- Exit Button -->
+                      <!-- Exit Button -->
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
-<!--  Booleans Game End-->
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- Portfolio Modal 5 --> <!--  Booleans Game End -->
+
+
+
+
+
+    <!-- Portfolio Modal 6 --> <!--  Fit 360 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+                    <!--  Fit 360 -->
+        <a href="http://fit360.herokuapp.com/" target="_blank">  <h2 class="text-secondary text-uppercase mb-0"> Fit 360  </h2>
+        </a>
+        <img class="img-fluid mb-5" src="img/portfolio/fit360.jpeg" alt="">
+        <h4 class="mb-5">
+          <a href="http://fit360.herokuapp.com/" target="_blank">Fit 360</a> is a group project built with Ruby, Ruby on Rails, JavaScript, PostgreSQL, AWS, Google Maps API, Axios HTTP Client, HTML, CSS, Bootstrap, Trello, Git/GitHub, Bcrypt, and RESTful methodologies.
+        </h4>
+        <h4 class="mb-5">
+          <a href="http://fit360.herokuapp.com/" target="_blank">Fit360</a>, an alternitive to the gym. The social media platform and fitness hub where personal trainers/instructors can add their fitness courses for the world to see. Course locations are stored on a map for public browsing. Sign up as an Athlete to buy courses or sign up as a personal trainer, post courses and eliminate the previously inevetiable awkward payment conversations. App is mobile responsive.
+        </h4>
+            <hr>
+            <br>
+        <h4 class="mb-5">
+        Click <a class="btn btn-primary btn-lg rounded-pill" href="http://fit360.herokuapp.com/" target="_blank"> Here </a> to check out Fit 360.
+        </h4>
+
+        <hr>
+                      <!-- Exit Button -->
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!--  Fit360 End-->
+
+
+
+
+
+  <!-- Portfolio Modal 7 --> <!--  Vegan Eats -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-7">
+    <div class="portfolio-modal-dialog bg-white">
+      <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+        <i class="fa fa-3x fa-times"></i>
+      </a>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+                  <!--  Vegan Eats -->
+      <a href="http://veganeats.herokuapp.com/" target="_blank">  <h2 class="text-secondary text-uppercase mb-0"> VeganEats </h2>
+      </a>
+      <img class="img-fluid mb-5" src="img/portfolio/vegan-diet.jpg" alt="">
+      <h4 class="mb-5">
+        <a href="http://veganeats.herokuapp.com/" target="_blank">VeganEats</a> is a solo project built with Ruby, Ruby on Rails, JavaScript, PostgreSQL, AWS, HTML, CSS, Bootstrap, Git/GitHub.
+      </h4>
+      <h4 class="mb-5">
+        <a href="http://veganeats.herokuapp.com/" target="_blank">VeganEats</a>, is an online community where we share our favorite vegan recipes with the world. Create, Read, Update, and Delete your favorite recipes and step by step directions.
+      </h4>
+          <hr>
+          <br>
+      <h4 class="mb-5">
+      Click <a class="btn btn-primary btn-lg rounded-pill" href="http://veganeats.herokuapp.com/" target="_blank"> Here </a> to check out VeganEats.
+      </h4>
+
+      <hr>
+                    <!-- Exit Button -->
+            <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+              <i class="fa fa-close"></i>
+              Close Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--  Fit360 End-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
