Added stable release notation under project titles

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <h4 class="text-center"> Fit360</h4>
-              <!-- <h5 class="text-center"> (Stable Release 4/25/18)</h5> -->
+              <h3 class="text-center"> Fit360</h3>
+              <h5 class="text-center"> (Stable Release 4/25/18)</h5>
               <img class="img-fluid" src="img/portfolio/fit360.jpeg" alt="fit360-cover-photo">
             </a>
           </div>
@@ -145,7 +145,8 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <h4 class="text-center"> Vegan Eats</h4>
+            <h3 class="text-center"> Vegan Eats</h3>
+            <h5 class="text-center"> (Stable Release 4/30/18)</h5>
             <img class="img-fluid" src="img/portfolio/vegan-diet.jpg" alt="fit360-cover-photo">
           </a>
         </div>
@@ -161,7 +162,9 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-                <h4 class="text-center"> Place Saver </h4>
+                <h3 class="text-center"> Place Saver </h3>
+                <h5 class="text-center"> (Stable Release 2/22/18)</h5>
+
               <img class="img-fluid" src="img/portfolio/placesaver.jpg" alt="">
             </a>
           </div>
@@ -177,7 +180,9 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <h4 class="text-center"> Laravel Blog</h4>
+              <h3 class="text-center"> Laravel Blog</h3>
+              <h5 class="text-center"> (Stable Release 4/12/18)</h5>
+
               <img class="img-fluid" src="img/portfolio/laravel-logo.png" alt="">
             </a>
           </div>
@@ -193,7 +198,8 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <h4 class="text-center">Location Information</h4>
+              <h3 class="text-center">Location Information</h3>
+              <h5 class="text-center"> (Stable Release 2/20/18)</h5>
               <img class="img-fluid" src="img/portfolio/geo-pic.jpg" alt="">
             </a>
           </div>
@@ -208,7 +214,8 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-                <h4 class="text-center"> MyApply</h4>
+                <h3 class="text-center"> MyApply</h3>
+                <h5 class="text-center"> (Stable Release 2/13/18)</h5>
               <img class="img-fluid" src="img/portfolio/myapply.jpg" alt="">
             </a>
           </div>
@@ -223,7 +230,8 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <h4 class="text-center">Booleans Game</h4>
+              <h3 class="text-center">Booleans Game</h3>
+              <h5 class="text-center"> (Stable Release  12/12/17)</h5>
               <img class="img-fluid" src="img/portfolio/torf.jpg" alt="">
             </a>
           </div>
@@ -655,7 +663,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
                   <!--  Vegan Eats -->
-      <a href="http://veganeats.herokuapp.com/" target="_blank">  <h2 class="text-secondary text-uppercase mb-0"> VeganEats </h2>
+      <a href="http://veganeats.herokuapp.com/" target="_blank">  <h2 class="text-secondary mb-0"> VeganEats </h2>
       </a>
       <img class="img-fluid mb-5" src="img/portfolio/vegan-diet.jpg" alt="">
       <h4 class="mb-5">
@@ -680,7 +688,7 @@
       </div>
     </div>
   </div>
-<!--  Fit360 End-->
+<!--  VeganEats End-->
 
 
 
